// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`callback events 1`] = `
<div class="ghb-popup ghb-popup--round ghb-popup--bottom ghb-popup--safe-area-inset-bottom ghb-action-sheet" name="ghb-popup-slide-bottom" style="z-index: 2002;">
  <div class="ghb-action-sheet__content"><button type="button" class="ghb-action-sheet__item"><span class="ghb-action-sheet__name">Option</span></button><button type="button" class="ghb-action-sheet__item ghb-action-sheet__item--disabled"><span class="ghb-action-sheet__name">Option</span></button><button type="button" class="ghb-action-sheet__item ghb-action-sheet__item--loading">
      <div class="ghb-loading ghb-loading--circular ghb-action-sheet__loading-icon"><span class="ghb-loading__spinner ghb-loading__spinner--circular"><svg viewBox="25 25 50 50" class="ghb-loading__circular"><circle cx="50" cy="50" r="20" fill="none"></circle></svg></span></div>
    </button><button type="button" class="ghb-action-sheet__item"><span class="ghb-action-sheet__name">Option</span>
      <div class="ghb-action-sheet__subname">Subname</div></button></div>
  <div class="ghb-action-sheet__gap"></div><button type="button" class="ghb-action-sheet__cancel">Cancel</button>
</div>
`;

exports[`close-icon prop 1`] = `
<div class="ghb-popup ghb-popup--round ghb-popup--bottom ghb-popup--safe-area-inset-bottom ghb-action-sheet" name="ghb-popup-slide-bottom">
  <div class="ghb-action-sheet__header">Title<i class="ghb-icon ghb-icon-cross ghb-action-sheet__close">
      <!----></i></div>
  <div class="ghb-action-sheet__content"></div>
</div>
`;

exports[`closeable prop 1`] = `
<div class="ghb-popup ghb-popup--round ghb-popup--bottom ghb-popup--safe-area-inset-bottom ghb-action-sheet" name="ghb-popup-slide-bottom">
  <div class="ghb-action-sheet__header">Title</div>
  <div class="ghb-action-sheet__content"></div>
</div>
`;

exports[`color option 1`] = `
<div class="ghb-popup ghb-popup--round ghb-popup--bottom ghb-popup--safe-area-inset-bottom ghb-action-sheet" name="ghb-popup-slide-bottom">
  <div class="ghb-action-sheet__content"><button type="button" class="ghb-action-sheet__item" style="color: red;"><span class="ghb-action-sheet__name">Option</span></button></div>
</div>
`;

exports[`description prop 1`] = `
<div class="ghb-popup ghb-popup--round ghb-popup--bottom ghb-popup--safe-area-inset-bottom ghb-action-sheet" name="ghb-popup-slide-bottom">
  <div class="ghb-action-sheet__description">This is a description</div>
  <div class="ghb-action-sheet__content"><button type="button" class="ghb-action-sheet__item"><span class="ghb-action-sheet__name">Option</span></button></div>
</div>
`;

exports[`description slot 1`] = `
<div class="ghb-popup ghb-popup--round ghb-popup--bottom ghb-popup--safe-area-inset-bottom ghb-action-sheet" name="ghb-popup-slide-bottom">
  <div class="ghb-action-sheet__description">Custom Description</div>
  <div class="ghb-action-sheet__content"><button type="button" class="ghb-action-sheet__item"><span class="ghb-action-sheet__name">Option</span></button></div>
</div>
`;

exports[`disable lazy-render 1`] = `
<div class="ghb-popup ghb-popup--round ghb-popup--bottom ghb-popup--safe-area-inset-bottom ghb-action-sheet" style="display: none;" name="ghb-popup-slide-bottom">
  <div class="ghb-action-sheet__content"><button type="button" class="ghb-action-sheet__item"><span class="ghb-action-sheet__name">Option</span></button><button type="button" class="ghb-action-sheet__item"><span class="ghb-action-sheet__name">Option</span></button></div>
  <div class="ghb-action-sheet__gap"></div><button type="button" class="ghb-action-sheet__cancel">Cancel</button>
</div>
`;

exports[`render title and default slot 1`] = `
<div class="ghb-popup ghb-popup--round ghb-popup--bottom ghb-popup--safe-area-inset-bottom ghb-action-sheet" name="ghb-popup-slide-bottom">
  <div class="ghb-action-sheet__header">Title<i class="ghb-icon ghb-icon-cross ghb-action-sheet__close">
      <!----></i></div>
  <div class="ghb-action-sheet__content">Default</div>
</div>
`;

exports[`round prop 1`] = `
<div class="ghb-popup ghb-popup--round ghb-popup--bottom ghb-popup--safe-area-inset-bottom ghb-action-sheet" name="ghb-popup-slide-bottom">
  <div class="ghb-action-sheet__content"><button type="button" class="ghb-action-sheet__item"><span class="ghb-action-sheet__name">Option</span></button></div>
</div>
`;
